compiler/tests/invalid/simple/SetComprehension_CompileFail_4.whiley
void System::main([string] args):
    xs = {1,2,3}
    zs = { x+y | x ∈ xs }
    print str(xs)
    print str(zs)
